@@ -33,25 +33,11 @@ let init_path () =
 
 (** Return the initial environment in which compilation proceeds. *)
 let initial_env () =
-  let initial =
-    if Config.safe_string then Env.initial_safe_string
-    else if !Clflags.unsafe_string then Env.initial_unsafe_string
-    else Env.initial_safe_string
-  in
-  let open_mod env m =
-    let open Asttypes in
-    let lid = {loc = Location.in_file "ocamldoc command line";
-               txt = Longident.parse m } in
-    snd (Typemod.type_open_ Override env lid.loc lid) in
-  (* Open the list of modules given as arguments of the "-open" flag
-     The list is reversed to open the modules in the left-to-right order *)
-  let to_open = List.rev !Clflags.open_modules in
-  let to_open =
-    if Env.get_unit_name () = "Pervasives"
-    then to_open
-    else "Pervasives" :: to_open
-  in
-  List.fold_left open_mod initial to_open
+  Typemod.initial_env
+    ~loc:(Location.in_file "ocamldoc command line")
+    ~safe_string:(Config.safe_string || not !Clflags.unsafe_string)
+    ~open_pervasives:(Env.get_unit_name () <> "Pervasives")
+    ~open_implicit_modules:(List.rev !Clflags.open_modules)
 
 (** Optionally preprocess a source file *)
 let preprocess sourcefile =
