@@ -1,0 +1,1 @@
+let message = "Hello, world!"
