@@ -1,0 +1,4 @@
+(* TEST
+   modules = "largeFile.ml"
+*)
+print_string LargeFile.message
