@@ -29,7 +29,9 @@ type summary =
   | Env_modtype of summary * Ident.t * modtype_declaration
   | Env_class of summary * Ident.t * class_declaration
   | Env_cltype of summary * Ident.t * class_type_declaration
-  | Env_open of summary * Path.t
+  | Env_open of summary * Misc.StringSet.t * Path.t
+  (** The string set argument of [Env_open] represents a list of module names
+      to skip, i.e. that won't be imported in the toplevel namespace. *)
   | Env_functor_arg of summary * Ident.t
   | Env_constraints of summary * type_declaration PathMap.t
   | Env_copy_types of summary * string list
@@ -162,8 +164,26 @@ val add_signature: signature -> t -> t
    not a structure. *)
 val open_signature:
     ?used_slot:bool ref ->
-    ?loc:Location.t -> ?toplevel:bool -> Asttypes.override_flag -> Path.t ->
+    ?loc:Location.t -> ?toplevel:bool ->
+    Asttypes.override_flag -> Path.t ->
       t -> t option
+
+(* Similar to [open_signature], except that modules from the load path
+   have precedence over sub-modules of the opened module.
+
+   For instance, if opening a module [M] with a sub-module [X]:
+   - if the load path contains a [x.cmi] file, then resolving [X] in the
+     new environment yields the same result as resolving [X] in the
+     old environment
+   - otherwise, in the new environment [X] resolves to [M.X]
+*)
+val open_signature_of_initially_opened_module:
+    Path.t -> t -> t option
+
+(* Similar to [open_signature] except that sub-modules of the opened modules
+   that are in [hidden_submodules] are not added to the environment. *)
+val open_signature_from_env_summary:
+    Path.t -> t -> hidden_submodules:Misc.StringSet.t -> t option
 
 val open_pers_signature: string -> t -> t
 
